# coryat

./: DESIGN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/coryat/: board.py  cli.py  config.py  data.py  git.py  scoring.py  scraper.py  tui.py
tests/: test_cli.py  test_data.py  test_scoring.py
tests/fixtures/: sample_game.csv
