[project]
name = "coryat"
version = "0.1.0"
description = "Terminal tool for tracking Jeopardy! Coryat scores"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "blessed>=1.38.0",
    "requests>=2.33.1",
]

[project.scripts]
playj = "coryat.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coryat"]

[tool.ruff]
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
